# python-project-49

./: .codeclimate.yml  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: cli.py  engine.py  game_logic.py  question_answer.py
brain_games/games/: brain_calc.py  brain_calc_game.py  brain_even.py  brain_even_game.py  brain_gcd_game.py  brain_prime_game.py  brain_progression_game.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain__games.py  brain_calc.py  brain_even.py  brain_game.py  brain_games.py  brain_games__.py  brain_gcd.py  brain_prime.py  brain_progression.py
